evaluation publish API

--- a/apiDoc.yaml
+++ b/apiDoc.yaml
@@ -773,13 +773,9 @@ paths:
               data:
                 type: object
                 properties:
-                  course_id:
-                    type: string
                   evaluation_id:
                     type: integer
                     description: 评课id
-                  user_id:
-                    type: integer
         '400':
           description: bad request
           schema:
@@ -801,7 +797,7 @@ paths:
       parameters:
         - in: header
           name: token
-          required: true
+          required: false
           type: string
         - in: path
           name: id
@@ -888,7 +884,7 @@ paths:
       parameters:
         - in: header
           name: token
-          required: true
+          required: false
           type: string
         - in: path
           name: id
@@ -1588,16 +1584,17 @@ definitions:
         type: integer
         description: 评价星级
       attendance_check_type:
-        type: string
-        description: 考勤方式
+        type: integer
+        description: 考勤方式，经常点名/偶尔点名/签到点名，标识为 0/1/2
       exam_check_type:
-        type: string
-        description: 考核方式
+        type: integer
+        description: 考核方式，无考核/闭卷考试/开卷考试/论文考核，标识为 0/1/2/3
       tags:
         type: array
-        description: 课程特点标签
+        description: 课程特点标签id列表
+        example: [0, 1, 2]
         items:
-          $ref: '#/definitions/CourseCommentTag'
+          type: integer
       content:
         type: string
         description: 评价内容
@@ -1620,16 +1617,17 @@ definitions:
         type: integer
         description: 评价星级
       attendance_check_type:
-        type: string
-        description: 考勤方式
+        type: integer
+        description: 考勤方式，经常点名/偶尔点名/签到点名，标识为 0/1/2
       exam_check_type:
-        type: string
-        description: 考核方式
+        type: integer
+        description: 考核方式，无考核/闭卷考试/开卷考试/论文考核，标识为 0/1/2/3
       tags:
         type: array
-        description: 课程特点标签
+        description: 课程特点标签id列表
+        example: [0,1,2]
         items:
-          $ref: '#/definitions/CourseCommentTag'
+          type: integer
       content:
         type: string
         description: 评课内容
@@ -1653,7 +1651,7 @@ definitions:
         description: 评课的用户信息
         properties:
           user_id:
-            type: string
+            type: integer
           username:
             type: string
           avatar:
@@ -1680,6 +1678,8 @@ definitions:
         type: object
         description: 用户信息
         properties:
+          user_id:
+            type: integer
           username:
             type: string
           avatar:
@@ -1756,15 +1756,6 @@ definitions:
         description: 课堂列表
         items:
           $ref: "#/definitions/Class"
-
-  CourseCommentTag:
-    type: object
-    description: 评课标签
-    properties:
-      tag_id:
-        type: integer
-      tag_name:
-        type: string
 
   HistoryCourseInfo:
     type: object
