--- a/apiDoc.yaml
+++ b/apiDoc.yaml
@@ -88,7 +88,7 @@ paths:
       consumes:
         - application/json
       parameters:
-        - name: Authorizaiton
+        - name: token
           in: header
           required: true
           description: token
